--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bytes = "1.0"
 chrono = "0.4"
 dashmap = "6.1.0"
 fail = "0.5"
+moka = { version = "0.12", features = ["future"] }
 opendata-common = { path = "./opendata-common" }
 rstest = "0.19"
 serde = { version = "1.0", features = ["derive"] }
