vector write coordinator (#158)
* move vector over to write coordinator

* review feedback

* fix build post rebase

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ clap = { version = "4", features = ["derive", "env"] }
 config = "0.14"
 dashmap = "6.1.0"
 fail = "0.5"
-futures = "0.3"
+futures = { version = "0.3", features = ["std"] }
 moka = { version = "0.12", features = ["future"] }
 bencher = { path = "./bencher" }
 common = { path = "./common" }
