--- a/vector/Cargo.toml
+++ b/vector/Cargo.toml
@@ -8,7 +8,9 @@ anyhow.workspace = true
 async-trait.workspace = true
 common.workspace = true
 bytes.workspace = true
+dashmap.workspace = true
 fail.workspace = true
+futures.workspace = true
 usearch = "2"
 roaring.workspace = true
 rstest.workspace = true
