--- a/vector/Cargo.toml
+++ b/vector/Cargo.toml
@@ -25,6 +25,8 @@ usearch = "2"
 roaring.workspace = true
 rstest.workspace = true
 tokio.workspace = true
+tokio-util.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 rand = "0.8"
