(timeseries) add integration tests (#203)
* test(timeseries): add HTTP server integration tests

Add integration tests exercising the timeseries HTTP endpoints using
Axum's oneshot() infrastructure with a real SlateDB-backed TSDB
(in-memory store).

serde_urlencoded (used by axum's built-in Query/Form extractors) could not
deserialize repeated query keys like match[]=a&match[]=b into Vec<String>.
Replace with axum-extra's Query and Form extractors which use
serde_html_form and handle repeated keys natively.

--- a/timeseries/Cargo.toml
+++ b/timeseries/Cargo.toml
@@ -19,11 +19,13 @@ path = "src/main.rs"
 
 [features]
 default = []
+testing = []
 remote-write = ["dep:prost", "dep:snap"]
 
 [dependencies]
 async-trait.workspace = true
 axum.workspace = true
+axum-extra.workspace = true
 bytes.workspace = true
 chrono.workspace = true
 clap.workspace = true
@@ -61,3 +63,7 @@ snap = { workspace = true, optional = true }
 [dev-dependencies]
 fail.workspace = true
 rstest.workspace = true
+
+[[test]]
+name = "http_server"
+required-features = ["testing"]
