--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ edition = "2024"
 anyhow = "1.0"
 async-trait = "0.1"
 axum = "0.8"
+axum-extra = { version = "0.12", features = ["query", "form"] }
 base64 = "0.22"
 bytes = "1.0"
 chrono = "0.4"
